--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1935,12 +1935,6 @@ border: 2px solid #AF4FFF;
   outline: 2px solid #AF4FFF;
 }
 
-.nav-popover-title-active::after {
-  border-bottom: 1px solid #000000;
-  content: "";
-  width: ;
-}
-
 .nav-popover-container {
   width: 1100px;
 }
@@ -1957,4 +1951,190 @@ border: 2px solid #AF4FFF;
 .nav-popover-content .nav-popover-title:nth-of-type(3) {
   grid-row: 3 / 4;
   grid-column: 1 / 2;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(240, 240, 240, 0.9);
+  z-index: 2;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 72px 80px;
+  background: #FFFFFF;
+  border: 10px solid #000000;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.modal-auth {
+  width: 760px;
+}
+
+.modal-close-button {
+  background-image: url("../images/modal-exit-btn.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  width: 26px;
+  height: 26px;
+  background-color: transparent;
+}
+
+.modal-title-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-title {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+}
+
+.auth-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.field-group {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-top: 42px;
+}
+
+.auth-form-field {
+  border: none;
+  padding: 20px;
+  margin: 0;
+  background: #F0F0F0;
+  font-family: 'Rubik', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.name-field {
+  width: 320px;
+}
+
+.email-field {
+  width: 320px;
+}
+
+.extra-field {
+  width: 500px;
+}
+
+.quantity-field {
+  width: 40px;
+}
+
+.quantity-btn {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-btn-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.quantity-block {
+  display: flex;
+}
+
+.modal-form-button {
+  margin-top: 42px;
+  padding: 0 30px;
+  z-index: 1;
+}
+
+.modal-form-button::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  content: "";
+  width: auto;
+  height: 8px;
+  background-color: #FFE17F;
+  z-index: -1;
+}
+
+.modal-form-button:hover {
+  background-color: #FFE17F;
+}
+
+.modal-form-button:active {
+  background-color: #FFCC33;
+}
+
+.modal-form-button:active::before {
+  background-color: #FFCC33;
+}
+
+.modal-form-button:focus {
+  box-shadow: inset 0 0 0 2px #AF4FFF;
+  outline: none;
+}
+
+.auth-name-label {
+  margin-bottom: 18px;
+  font-family: 'Rubik', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #000000;
+}
+
+.modal-icon {
+  position: absolute;
+  right: 21px;
+  bottom: 24px;
+}
+
+.quantity-label {
+  position: relative;
+}
+
+.quantity-label::after {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  content: "i";
+  color: #000000;
+  width: 26px;
+  height: 26px;
+  background: #FFE17F;
+  border-radius: 50%;
+  top: -3px;
+  right: 50px;
 }
